# beyond

./: README.md  pyproject.toml
beyond/: board.py  dimension.py  dimensions.py
beyond/chess/: __init__.py  board.py  dimensions.py
beyond/tictactoe/: board.py
