[tool.poetry]
name = "beyond"
version = "0.1.0"
description = "Tic Tac Toe, but to worst possible extent."
authors = ["bswck <bswck.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
pandas = "^2.0.2"
xarray = "^2023.6.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
mypy = "^1.4.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
